deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-s3-clone-deployment
  labels:
    app: my-s3-clone
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-s3-clone
  template:
    metadata:
      labels:
        app: my-s3-clone
    spec:
      containers:
      - name: my-s3-clone
        image: alizeamasseplat/my-s3-clone:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 9090
