service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-s3-clone-service
spec:
  selector:
    app: my-s3-clone
  ports:
    - protocol: TCP
      port: 9090  
      targetPort: 9090  
  type: ClusterIP
