ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-s3-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: my-s3.cdpi.atelier.ovh
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: my-s3-clone-service
              port:
                number: 9090
  
  tls:
  - hosts:
    - my-s3.cdpi.atelier.ovh
    secretName: my-s3-tls
